hover effect added, z-index style corrected

--- a/styles/style.css
+++ b/styles/style.css
@@ -23,8 +23,12 @@
   border-bottom: 1px solid #000;
 }
 
-.header__menu-item_active .header__menu-link {
+.header__menu-list .header__menu-item_active:first-child .header__menu-link {
   border-bottom: 0;
+}
+
+.header__menu-item:hover {
+  opacity: .6;
 }
 
 .header__logo {
@@ -58,7 +62,6 @@
 .cover {
   padding: 165px 50px 50px;
   position: relative;
-  z-index: -2;
   background-image: url(../images/cover.jpg);
   background-size: cover;
   background-repeat: no-repeat;
@@ -72,7 +75,6 @@
   height: 100%;
   position: absolute;
   inset: 0;
-  z-index: -1;
   background-color: rgba(0, 0, 0, 0.6);
 }
 
@@ -80,6 +82,8 @@
   display: flex;
   flex-direction: column;
   gap: 20px;
+  position: relative;
+  z-index: 1;
   font-size: 100px;
   font-weight: 700;
   line-height: 1.15;
@@ -110,6 +114,8 @@
 }
 
 .cover__description {
+  position: relative;
+  z-index: 1;
   display: flex;
   justify-content: end;
   align-items: center;
@@ -133,6 +139,11 @@
   text-transform: uppercase;
   font-size: 22px;
   font-weight: 400;
+  cursor: pointer;
+}
+
+.hover-effect:hover {
+  opacity: .6;
 }
 
 .lots {
@@ -169,12 +180,15 @@
   color: #fff;
 }
 
+.card-link:hover {
+  opacity: .6;
+}
+
 .card {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   position: relative;
-  z-index: -2;
   height: 100%;
   padding: 50px 40px;
   background-size: cover;
@@ -193,6 +207,8 @@
 }
 
 .card__title {
+  position: relative;
+  z-index: 1;
   font-size: 22px;
   font-weight: 700;
   line-height: 1.2;
@@ -201,6 +217,8 @@
 }
 
 .card__text {
+  position: relative;
+  z-index: 1;
   font-size: 20px;
   font-weight: 400;
   line-height: 1.2;
@@ -280,6 +298,10 @@
   border-bottom: 0;
 }
 
+.footer__menu-item:hover {
+  opacity: .6;
+}
+
 .footer__social-list {
   display: flex;
   gap: 48px;
@@ -288,6 +310,10 @@
 
 .footer__social-list-item {
   width: 48px;
+}
+
+.footer__social-list-item:hover {
+  opacity: .6;
 }
 
 .footer__social-link {
